# langadvisor

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.github/workflows/: build-release.yml
core/: __init__.py  history_store.py  languages.py  lesson_store.py  llm.py  model_fetcher.py  paths.py  persistence.py
services/: __init__.py  assessor.py  lesson_service.py  practice_service.py
tests/: test_languages.py  test_lesson.py  test_main.py  test_paths.py  test_persistence.py
ui/: __init__.py  app.py  assessment_panel.py  lesson_panel.py  practice_panel.py  settings_panel.py  sidebar.py  typography.py
